--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,4 +5,11 @@
 		background: #000;
 		border-bottom: 1px solid;
 	}
+	.gallry-wraper {
+	    margin-bottom: 1em;
+	}
+	.skill-wrapper .col-xs-6.col-md-3 {
+	    margin-bottom: 2em;
+	}
+	
 }
