--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
 body{
 	font-family: 'Montserrat', sans-serif;
 }
+#scroll{z-index:2;position:fixed;right:10px;bottom:10px;cursor:pointer;width:50px;height:50px;background-color:#444;text-indent:-9999px;display:none;-webkit-border-radius:60px;-moz-border-radius:60px;border-radius:60px}
+#scroll span{position:absolute;top:50%;left:50%;margin-left:-8px;margin-top:-12px;height:0;width:0;border:8px solid transparent;border-bottom-color:#ffffff;}
+#scroll:hover{background-color:#000;opacity:1;filter:"alpha(opacity=100)";-ms-filter:"alpha(opacity=100)";}
 .banner{
 	background-color: #000;
 	height: 100vh;
