--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,7 +6,7 @@
 		border-bottom: 1px solid;
 	}
 	.personal_detail ul{
-		padding-left:0;
+		padding-left: 0!important;
 	}
 	.gallry-wraper {
 	    margin-bottom: 1em;
